k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: backend
        image: bvbl/todo-backend:latest
        ports:
        - containerPort: 8081
      - name: frontend
        image: bvbl/todo-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # Фронтенд
    - protocol: TCP
      port: 8081
      targetPort: 8081  # Бэкенд
